--- a/index.html
+++ b/index.html
@@ -15,18 +15,17 @@
           <input type="text" name="city" class="form">
         </form>
         <div class="card hiden">
-            <img src="./imag/day.svg" alt="imag" class="time">
+            <img src="" alt="imag" class="time">
             <div class="icon">
-                
-                <img src="./imag/icons/1.svg" alt="">
-                    <div class="text-details">
-                        <h5 class="city-name">City name</h5>
-                        <div class="weather-condition">Weather Condition</div>
-                        <div class="display">
-                            <span>temp</span>
-                            <span>&deg;C</span>
-                        </div>
-                    </div>
+                <img src="" alt="">
+            </div>
+            <div class="text-details">
+                <h5 class="city-name">City name</h5>
+                <div class="weather-condition">Weather Condition</div>
+                <div class="display">
+                    <span>temp</span>
+                    <span>&deg;C</span>
+                </div>
             </div>
         </div>
     </div>
