--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             </div>
         </div>
     </div>
-    <footer>&copy;2022</footer>
+    <footer>&copy;2022 API Form Accuweather</footer>
     <script src="./scripts/dom.js"></script>
      <script src="./scripts/api.js"></script>
 </body>
